feat: Изменить описание в хеде, изменить номер Алексея

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ремонт, обслуживание и диагностика автомобилей VAG в Челябинске. Автосервис - BGP AUTO</title>
-  <meta name="description" content="У Вас авто VAG группы: Volkswagen, Audi, Skoda, Seat, Porsche?
-  Мы предлагаем качественный сервис по доступной цене, широкий спектр услуг и запасные части в наличии.">
+  <meta name="description" content="Мы предлагаем качественный сервис по доступной цене для автомобилей: Volkswagen, Audi, Skoda, Seat, Porsche.
+  Широкий спектр услуг и запасные части в наличии.">
   <meta name="keywords" content="Volkswagen, Audi, Skoda, ремонт, ТО, диагностика, запчасти">
   <meta name="robots" content="index, follow">
   <link rel="preload" fetchpriority="high" as="image" href="<%=require('./images/background-main.webp')%>" type="image/webp">
@@ -435,7 +435,7 @@
             <p class="contacts__name">Алексей</p>
             <p class="contacts__job">диагност</p>
             <button class="contacts__connection contacts__connection_alexei"
-              aria-label="Телефон Алексея 8 (902) 605-47-42">Показать телефон</button>
+              aria-label="Телефон Алексея 8 (982) 367-86-99">Показать телефон</button>
           </li>
         </ul>
         <div class="contacts__container-work">
