feat: добавить таб индексы к ролям кнопок услуг

--- a/src/index.html
+++ b/src/index.html
@@ -115,30 +115,30 @@
       <h2 class="section__title">УСЛУГИ и ЦЕНЫ</h2>
       <div class="services__container">
         <div class="services__grid">
-          <div class="services__item services__item_engine" aria-label="Ремонт двигателя" role="button">
+          <div class="services__item services__item_engine" aria-label="Ремонт двигателя" tabindex="0" role="button">
             <img class="services__img" src="<%=require('./images/service-engine.png')%>" alt="Картинка двигателя Volkswagen">
             <div class="services__circel"></div>
             <h3 class="services__title">Ремонт двигателя</h3>
           </div>
-          <div class="services__item services__item_chassis" aria-label="Ремонт ходовой части" role="button">
+          <div class="services__item services__item_chassis" aria-label="Ремонт ходовой части" tabindex="0" role="button">
             <img class="services__img" src="<%=require('./images/service-chassis.png')%>" alt="Картинка ходовой части Volkswagen">
             <div class="services__circel"></div>
             <h3 class="services__title">Ремонт ходовой</h3>
           </div>
           <div class="services__item services__item_transmission"
-            aria-label="Ремонт трансмиссии и коробок переменных передач" role="button">
+            aria-label="Ремонт трансмиссии и коробок переменных передач" tabindex="0" role="button">
             <img class="services__img" src="<%=require('./images/service-transmission.png')%>"
               alt="Картинка коробки переменных передач Volkswagen DSG">
             <div class="services__circel"></div>
             <h3 class="services__title">Ремонт КПП</h3>
           </div>
-          <div class="services__item services__item_to" aria-label="Плановое техническое обслуживание" role="button">
+          <div class="services__item services__item_to" aria-label="Плановое техническое обслуживание" tabindex="0" role="button">
             <img class="services__img" src="<%=require('./images/service-to.png')%>"
               alt="Картинка набора материалов для технического обслуживания">
             <div class="services__circel"></div>
             <h3 class="services__title">Плановое ТО</h3>
           </div>
-          <div class="services__item services__item_diagnostics" aria-label="Диагностика и электрика" role="button">
+          <div class="services__item services__item_diagnostics" aria-label="Диагностика и электрика" tabindex="0" role="button">
             <img class="services__img" src="<%=require('./images/service-diagnostics.png')%>" alt="Картинка диагностики авто">
             <div class="services__circel"></div>
             <h3 class="services__title">Диагностика</h3>
@@ -633,15 +633,15 @@
       </div>
       <div class="footer__social">
         <a href="https://vk.com/bgp.auto" target="_blank" rel="nofollow" title="ВКонтакте"
-          aria-label="Сообщество автосервиса БГП авто В Контакте">
+          aria-label="Сообщество автосервиса В Контакте">
           <div class="footer__social-icon footer__social-icon_vk"></div>
         </a>
         <a href="https://t.me/BgpAuto" target="_blank" rel="nofollow" title="Телеграм"
-          aria-label="Группа автосервиса БГП авто в Телеграме">
+          aria-label="Группа автосервиса в Телеграме">
           <div class="footer__social-icon footer__social-icon_telegram"></div>
         </a>
         <a href="https://www.avito.ru/chelyabinsk/predlozheniya_uslug/remont_vag_i_dr._diagnostika_endoskopiya_2069050121"
-          target="_blank" rel="nofollow" title="Авито" aria-label="Страница автосервиса БГП авто на Авито">
+          target="_blank" rel="nofollow" title="Авито" aria-label="Страница автосервиса на Авито">
           <div class="footer__social-icon footer__social-icon_avito"></div>
         </a>
       </div>
