feat: заменить div в услугах на кнопки, поправить стили

--- a/src/index.html
+++ b/src/index.html
@@ -115,34 +115,34 @@
       <h2 class="section__title">УСЛУГИ и ЦЕНЫ</h2>
       <div class="services__container">
         <div class="services__grid">
-          <div class="services__item services__item_engine" aria-label="Ремонт двигателя" tabindex="0" role="button">
+          <button class="services__item services__item_engine" aria-label="Ремонт двигателя">
             <img class="services__img" src="<%=require('./images/service-engine.png')%>" alt="Картинка двигателя Volkswagen">
-            <div class="services__circel"></div>
-            <h3 class="services__title">Ремонт двигателя</h3>
-          </div>
-          <div class="services__item services__item_chassis" aria-label="Ремонт ходовой части" tabindex="0" role="button">
+            <span class="services__circel"></span>
+            <span class="services__title">Ремонт двигателя</span>
+          </button>
+          <button class="services__item services__item_chassis" aria-label="Ремонт ходовой части">
             <img class="services__img" src="<%=require('./images/service-chassis.png')%>" alt="Картинка ходовой части Volkswagen">
-            <div class="services__circel"></div>
-            <h3 class="services__title">Ремонт ходовой</h3>
-          </div>
-          <div class="services__item services__item_transmission"
-            aria-label="Ремонт трансмиссии и коробок переменных передач" tabindex="0" role="button">
+            <span class="services__circel"></span>
+            <span class="services__title">Ремонт ходовой</span>
+          </button>
+          <button class="services__item services__item_transmission"
+            aria-label="Ремонт трансмиссии и коробок переменных передач">
             <img class="services__img" src="<%=require('./images/service-transmission.png')%>"
               alt="Картинка коробки переменных передач Volkswagen DSG">
-            <div class="services__circel"></div>
-            <h3 class="services__title">Ремонт КПП</h3>
-          </div>
-          <div class="services__item services__item_to" aria-label="Плановое техническое обслуживание" tabindex="0" role="button">
+            <span class="services__circel"></span>
+            <span class="services__title">Ремонт КПП</span>
+          </button>
+          <button class="services__item services__item_to" aria-label="Плановое техническое обслуживание">
             <img class="services__img" src="<%=require('./images/service-to.png')%>"
               alt="Картинка набора материалов для технического обслуживания">
-            <div class="services__circel"></div>
-            <h3 class="services__title">Плановое ТО</h3>
-          </div>
-          <div class="services__item services__item_diagnostics" aria-label="Диагностика и электрика" tabindex="0" role="button">
+            <span class="services__circel"></span>
+            <span class="services__title">Плановое ТО</span>
+          </button>
+          <button class="services__item services__item_diagnostics" aria-label="Диагностика и электрика">
             <img class="services__img" src="<%=require('./images/service-diagnostics.png')%>" alt="Картинка диагностики авто">
-            <div class="services__circel"></div>
-            <h3 class="services__title">Диагностика</h3>
-          </div>
+            <span class="services__circel"></span>
+            <span class="services__title">Диагностика</span>
+          </button>
         </div>
       </div>
     </section>
