feat: сео оптимизация

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
   <meta name="keywords" content="Volkswagen, Audi, Skoda, ремонт, ТО, диагностика, запчасти">
   <meta name="robots" content="index, follow">
   <link rel="preload" fetchpriority="high" as="image" href="<%=require('./images/background-main.webp')%>" type="image/webp">
-  <link rel="icon" href="<%=require('./images/icon.svg')%>" type="image/svg+xml" sizes="any">
+  <link rel="icon" href="<%=require('./images/favicon.svg')%>" type="image/svg+xml">
+  <meta name="yandex-verification" content="2e1611cf46e47ead" />
+  <meta name="google-site-verification" content="ldA_Wyr994gncH3SPU3xbHoCGeSX7fn1V8bDX9IA5CM" />
 </head>
 
 <body class="body">
